[package]
name = "name-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
type-map = "0.5.0"
parking_lot = "0.12.1"
once_cell = "1.17.0"
derive-new = "0.5.9"
sealed = "0.4.0"
